# BGalaxy1

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Galaxy1/: Galaxy1.sln  readme.txt
Galaxy1/Data/CL/: gravity.cl  gravity_basic.cl  move.cl  test.cl
Galaxy1/Galaxy1/: BHTree.cpp  BHTree.h  CMakeLists.txt  Galaxy1.vcxproj  Galaxy1.vcxproj.filters  GalaxyGizmo.cpp  GalaxyGizmo.h  GalaxySerializer.cpp  GalaxySerializer.h  GalaxySim.cpp  GalaxySim.h  GalaxySimGLWidget.h  GalaxyTypes.h  GalaxyWidget.ui  OpenCLWrappers.cpp  OpenCLWrappers.h  OpenCLWrappers.inl  galaxy1.cpp  galaxy1.h  galaxy1.qrc  galaxy1.ui  galaxy_c.h  main.cpp
MyLibs/GLBase/: GLBase.vcproj  GLBase.vcxproj  GLBase.vcxproj.filters  fontgl.hpp  sdlgl.hpp  texture.hpp  texture.inl
MyLibs/Math/: CMakeLists.txt  Math.vcproj  Math.vcxproj  Math.vcxproj.filters  aabb.hpp  atmospheric.hpp  atmospheric.inl  atmospheric2.h  boundingsphere.hpp  constants.hpp  frustum.hpp  hermite.hpp  highprec.h  intersection.hpp  matrix3.hpp  matrix4.hpp  misc.hpp  perlin.hpp  perlin.inl  plane.hpp  quaternion.hpp  ray.hpp  rectangle.hpp  ridgedmultifractal.hpp  ridgedmultifractal.inl  spatialnoise.hpp  spatialnoise.inl  sse_utils.hpp  transformation.hpp  vector2.hpp  vector3.hpp  vector4.hpp
MyLibs/Misc/: Misc.vcproj  Misc.vcxproj  Misc.vcxproj.filters  atomic.hpp  filefuncs.hpp  hash.hpp  libdesc.hpp  platform.h  rangelist.hpp  simdtypes.hpp  statemachine.hpp  waithandle.hpp
MyLibs/Ugly/: CMakeLists.txt  ProcessQueue.cpp  ProcessQueue.h  ProcessRedirect.cpp  ProcessRedirect.h  QDebugStream.cpp  QDebugStream.h  QtUtils.h  Ugly.vcxproj  Ugly.vcxproj.filters  UglyGraphicsView.cpp  UglyGraphicsView.h  ugly.cpp  ugly.h  wait_handle.h
MyLibs/Utils/: CMakeLists.txt  HRTimer.h  Utils.vcxproj  Utils.vcxproj.filters  WaitHandle.cpp  WaitHandle.h  stl_aligned_allocator.h
MyLibs/hpalib/: .cxxdepend  .depend  BUGS  CMakeLists.txt  Changelog  GNUmakefile  INSTALL  NOWARRANTY  README  ReadMe.txt  SMakefile  byteord.c  hpaconf.c  hpalib.vcproj  hpalib.vcxproj  hpalib.vcxproj.filters  makefile
MyLibs/hpalib/cxxtest/: README  build_cxx_tests  cctest1.cc  cctest10.cc  cctest11.cc  cctest12.cc  cctest2.cc  cctest3.cc  cctest4.cc  cctest5.cc  cctest6.cc  cctest7.cc  cctest8.cc  cctest9.cc  run_cxx_tests
MyLibs/hpalib/doc/: hpa.html  hpa.t2t  hpa.tex
MyLibs/hpalib/test/: README  TESTING  arch.c  body.c  run_all_tests  runtest  t2xtrig.c  tatox.c  tbxprint.c  tcform.c  tcxabs.c  tcxbasic.c  tcxbin.c  tcxcmp.c  tcxfunc1.c  tcxfunc2.c  tcxfunc3.c  tcxout.c  tcxpwr.c  testex.c  text  tinttox32.c  tinttox64.c  tprcxpr.c  tprxpr.c  tspecv.c  tstr2cx.c  tstr2x.c  txaop1.c  txaop2.c  txchser.c  txconv.c  txdiv.c  txexp.c  txfix.c  txflt.c  txfmod.c  txfrac.c  txfrex.c  txhypb.c  (+10 more)
